image function added in product controller and user controller using cloudinary

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REFRESH_JWT_SECRET='abcsdedsdds',
 ACCESS_JWT_SECRET='afdsasasasa',
+CLOUD_NAME: "dhvdjr4ie",
+API_KEY: "674512116235265", 
+API_SECRET: "iCa7gSGz2HxPS6Ntinrk6uy7eWI",
+MONGO_URI=mongodb+srv://AbdulRehman:abdulrehman1718@cluster0.rlb1t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0 
