--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "imgur": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
@@ -14,6 +15,7 @@
   },
   "name": "shopping_store",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
