--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.30.0",
+    "@eslint/json": "^0.12.0",
+    "eslint": "^9.30.0",
+    "globals": "^16.2.0"
+  }
 }
