--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
     "multer": "^2.0.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "serverless-http": "^3.2.0"
   },
   "name": "shopping_store",
   "version": "1.0.0",
